# Korvex-Guardian-Library

./: Cargo.toml  LICENSE
src/: lib.rs
src/config/: core.rs
src/i18n/: messages_en.rs  messages_fr.rs  mod.rs
src/model/: capabilities.rs  feature_gate.rs  mod.rs  modules.rs  telemetry.rs
