[package]
name = "kgl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Korvex Guardian Library (KGL) – shared types, config, localization, and models for Guardian."
repository = "https://github.com/korvex/kgl"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
